--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,160 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+### OS ###
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+desktop.ini
+
+### Python ###
+# Byte-compiled / optimized files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Test / coverage
+.pytest_cache/
+.coverage
+htmlcov/
+tox/
+nox/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+
+# IDE/editor settings and caches
+.ipynb_checkpoints/
+.python-version
+.ropeproject/
+.mypy_cache/
+.pyre/
+.pylint.d/
+
+### Node.js ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.pnp.*
+.vscode-test/
+
+# Lockfiles (optional—include if you don't want to track them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+### Terraform ###
+.terraform/
+terraform.tfstate
+terraform.tfstate.*
+*.tfvars
+override.tf
+override.tf.json
+crash.log
+.terraform.lock.hcl
+
+### Kubernetes / Kustomize ###
+# Kustomize build output (if you generate manifests in‐repo)
+kustomization.yaml
+kustomize.build/
+.kustomize-cache/
+
+# Local kubectl config
+.kube/
+
+### Docker ###
+# Ignore default docker-compose override and env files
+docker-compose.override.yml
+.env
+
+# Docker desktop settings
+.docker/
+
+### Java / Scala ###
+# Compiled class files
+*.class
+
+# Package files
+*.jar
+*.war
+*.ear
+
+# SBT / Mill / Scala Native
+target/
+project/target/
+project/project/
+dist/
+lib_managed/
+src_managed/
+.ensime_cache/
+.bloop/
+.worksheet/
+
+# IntelliJ / Eclipse
+*.iml
+*.ipr
+*.iws
+.idea/
+*.bak
+
+# Maven / Gradle
+*/target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildnumber.properties
+.mvn/timing.properties
+.gradle/
+build/
+
+### IDEs & Editors ###
+# VS Code
+.vscode/
+.history/
+
+# Eclipse
+.project
+.classpath
+.settings/
+.metadata/
+
+# NetBeans
+nbproject/private/
+
+# JetBrains Rider / ReSharper
+.idea/
+*.sln.iml
+
+### Misc ###
+*.log
+*.swp
+*.swo
+*.tmp
