modified:   WebAppQ/app/src/components/Dashboard/Dashboard.tsx 	new file:   WebAppQ/app/src/components/Dashboard/FinOpsSummaryWidget.tsx 	new file:   WebAppQ/app/src/components/Dashboard/PredictiveScalingWidget.tsx 	modified:   WebAppQ/app/src/components/WorkflowVisualizer/TaskDetailPanel.tsx 	new file:   WebAppQ/app/src/components/Workflows/GenerateWorkflowModal.tsx 	modified:   WebAppQ/app/src/pages/WorkflowStudioPage.tsx 	modified:   WebAppQ/app/src/services/managerAPI.ts 	modified:   WorkflowEngine/app/services/nl_workflow_generator.py 	modified:   agentQ/app/core/base_agent.py 	new file:   agentQ/app/core/collaboration_tool.py 	modified:   agentQ/app/core/finops_tools.py 	new file:   agentQ/app/core/predictive_autoscaler_tool.py 	new file:   agentQ/app/core/workflow_generator_tool.py 	modified:   agentQ/app/main.py 	modified:   agentQ/devops_agent.py 	modified:   agentQ/finops_agent.py 	modified:   agentQ/planner_agent.py 	new file:   managerQ/app/api/workflow_generator.py 	modified:   managerQ/app/core/workflow_executor.py 	modified:   managerQ/app/main.py 	modified:   managerQ/app/models.py 	new file:   managerQ/app/workflow_templates/finops_daily_scan.yaml 	new file:   managerQ/app/workflow_templates/predictive_scaling.yaml 	modified:   managerQ/app/workflow_templates/root_cause_analysis_workflow.yaml 	modified:   managerQ/config/goals.yaml

--- a/managerQ/app/workflow_templates/root_cause_analysis_workflow.yaml
+++ b/managerQ/app/workflow_templates/root_cause_analysis_workflow.yaml
@@ -50,14 +50,14 @@ tasks:
       2. **Logs**: {{ tasks.gather_logs.result }}
       3. **Kubernetes Events**: {{ tasks.gather_k8s_events.result }}
 
-      Analyze and correlate all of this information to determine the probable root cause of the issue.
+      Analyze and correlate all of this information to determine the probable root cause.
       Your analysis should be structured with the following sections:
       - **Summary**: A one-sentence summary of the probable root cause.
       - **Evidence**: A bulleted list of the key findings from metrics, logs, and events that support your conclusion.
       - **Recommendation**: A suggested next step for remediation.
 
       In addition to the markdown report, you MUST output a JSON object containing a `remediation_plan`.
-      The plan should have `tool_name` and `parameters`. For example:
+      The plan must have a `tool_name` and a `parameters` dictionary. For example:
       ```json
       {
         "remediation_plan": {
@@ -82,8 +82,10 @@ tasks:
     agent_personality: "devops"
     # This prompt uses the machine-readable output from the synthesis task
     prompt: |
-      The remediation plan has been approved.
-      Execute the tool `{{ tasks.synthesize_findings.result.remediation_plan.tool_name }}`
-      with the parameters `{{ tasks.synthesize_findings.result.remediation_plan.parameters }}`.
+      The remediation plan has been approved by a human operator.
+      You must now execute the specified tool with the provided parameters.
+      Tool Name: `{{ tasks.synthesize_findings.result.remediation_plan.tool_name }}`
+      Parameters: `{{ tasks.synthesize_findings.result.remediation_plan.parameters }}`
+      Use the appropriate tool to execute this plan.
     dependencies: ["request_remediation_approval"]
     condition: "{{ tasks.request_remediation_approval.result == 'approved' }}" 
