--- a/managerQ/config/goals.yaml
+++ b/managerQ/config/goals.yaml
@@ -107,6 +107,13 @@
     type: "on_startup"
   remediation_workflow_id: "wf_strategic_quarterly_analysis"
 
+- goal_id: "goal_autonomous_ventures_on_startup"
+  objective: "Activate the VC agent to begin seeking and executing profitable ventures."
+  is_active: true
+  trigger:
+    type: "on_startup"
+  remediation_workflow_id: "wf_autonomous_venture_creation"
+
 - goal_id: "goal_zero_day_vulnerability_response"
   objective: "A critical zero-day vulnerability has been announced for the 'log4j' library. Form a squad to assess our exposure, patch all affected services, and document the response."
   is_active: true
