new file:   H2M/app/core/observer_service.py 	modified:   H2M/app/main.py 	modified:   WebAppQ/app/src/App.tsx 	new file:   WebAppQ/app/src/components/common/ProactiveSuggestionToast.tsx 	new file:   agentQ/app/core/meta_cognition_tool.py 	new file:   agentQ/app/core/proactive_assistance_tool.py 	new file:   agentQ/app/core/self_modification_tool.py 	modified:   agentQ/app/services/dynamic_agent_spawner.py 	new file:   agentQ/chief_of_staff_agent.py 	new file:   managerQ/app/workflow_templates/approve_and_apply_prompt_update.yaml 	new file:   managerQ/app/workflow_templates/cognitive_psychology.yaml 	new file:   managerQ/app/workflow_templates/proactive_assistance.yaml 	modified:   managerQ/config/goals.yaml

--- a/managerQ/config/goals.yaml
+++ b/managerQ/config/goals.yaml
@@ -114,6 +114,13 @@
     type: "on_startup"
   remediation_workflow_id: "wf_autonomous_venture_creation"
 
+- goal_id: "goal_proactive_assistance_on_startup"
+  objective: "Activate the Chief of Staff agent to provide proactive assistance to users."
+  is_active: true
+  trigger:
+    type: "on_startup"
+  remediation_workflow_id: "wf_proactive_assistance"
+
 - goal_id: "goal_zero_day_vulnerability_response"
   objective: "A critical zero-day vulnerability has been announced for the 'log4j' library. Form a squad to assess our exposure, patch all affected services, and document the response."
   is_active: true
