deleted:    "O3DE-WorkflowVisualization/Gems/Q-WorkflowVisualization/Code/Source/WorkflowVisualization3DSystemComponent.cpp\nO3DE-WorkflowVisualization/Gems/Q-WorkflowVisualization/Code/Source/WorkflowVisualization3DSystemComponent.h" 	modified:   QuantumPulse/app/main.py 	new file:   QuantumPulse/app/services/qgan_service.py 	new file:   QuantumPulse/app/stream_processors/qgan_handler.py 	modified:   QuantumPulse/requirements.txt 	new file:   agentQ/app/core/estimate_cost_tool.py 	deleted:    "agentQ/app/core/finops_tools.py\nagentQ/app/core/finops_tools.py\nWebAppQ/app/src/components/Dashboard/FinOpsSummaryWidget.tsx" 	modified:   agentQ/app/core/meta_cognition_tool.py 	modified:   agentQ/app/core/quantum_ml_tool.py 	modified:   agentQ/app/core/self_modification_tool.py 	new file:   agentQ/app/core/test_generator_tool.py 	modified:   agentQ/app/main.py 	modified:   agentQ/guardian_agent.py 	renamed:    agentQ/app/knowledge_graph_agent.py -> agentQ/knowledge_graph_agent.py 	deleted:    "managerQ/app/api/governance.py\nmanagerQ/app/main.py" 	deleted:    "managerQ/app/core/report_generator.py\nmanagerQ/app/api/governance.py" 	modified:   managerQ/app/core/task_dispatcher.py 	modified:   managerQ/app/core/workflow_executor.py 	modified:   managerQ/app/models.py 	modified:   managerQ/app/workflow_templates/qgan_training.yaml 	new file:   managerQ/app/workflow_templates/self_improvement.yaml 	modified:   managerQ/app/workflow_templates/test_driven_development.yaml 	modified:   shared/q_messaging_schemas/schemas.py

--- a/managerQ/app/workflow_templates/qgan_training.yaml
+++ b/managerQ/app/workflow_templates/qgan_training.yaml
@@ -18,8 +18,8 @@ tasks:
     agent_personality: "quantum_ml"
     prompt: |
       The QGAN model has been trained successfully.
-      The training result, which contains the new model_id, is: {{ tasks.train_the_qgan.result }}
+      The training result was: {{ tasks.train_the_qgan.result }}
       
       You must now use the `generate_qgan_samples` tool to generate {{ shared_context.num_samples_to_generate }} new data points.
-      Extract the `best_model_id` from the previous step's result to use as the `model_id` parameter.
+      Use the model_id 'qgan-singleton' as it is the only one available.
     dependencies: ["train_the_qgan"] 
