--- a/IntegrationHub/requirements.txt
+++ b/IntegrationHub/requirements.txt
@@ -24,3 +24,11 @@ opentelemetry-api
 opentelemetry-sdk
 opentelemetry-instrumentation-fastapi
 prometheus-client
+
+# Database dependencies
+sqlalchemy>=2.0.0
+asyncpg>=0.28.0
+alembic>=1.12.0
+
+# Payment processing (for future integration)
+stripe>=7.0.0
