--- a/agentQ/requirements.txt
+++ b/agentQ/requirements.txt
@@ -56,3 +56,14 @@ bandit
 scipy>=1.11.0
 scikit-learn>=1.3.0
 networkx>=3.1.0
+
+# Cloud Provider SDKs
+boto3>=1.28.0
+google-cloud-billing>=1.11.0
+azure-mgmt-costmanagement>=4.0.0
+azure-identity>=1.14.0
+
+# LLM Provider SDKs
+openai>=1.0.0
+anthropic>=0.8.0
+google-generativeai>=0.3.0
